набросок главной страницы

--- a/index.html
+++ b/index.html
@@ -5,8 +5,56 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
-
+<header class="main-header">
+      <nav class="main-navigation">
+	 
+        <ul class="site-navigation">
+          <li><a href="info.html">Информация</a></li>
+          <li><a href="photovideo.html">Фото и видео</a></li>
+		  <a class="main-header-logo">
+	 <img src="img/index-logo.svg" width="150" height="100" alt="Логотип «City of Sedona">
+	 </a>
+          <li><a href="map.html">Карта штата</a></li>
+          <li><a href="hotels.html">Гостиницы</a></li>
+        </ul>
+      </nav>
+    </header>
+	<main class="container">
+      
+    <h1 class="visually-hidden">Welcome to the gorgeous</h1>
+      <p>Седона - небольшой городок в Аризоне, заслуживающий большего!<br>
+	  Рассмотрим пять причин, по которым Седона круче, чем Гранд Каньон!
+	  </p>
+	  <section class="features">
+        <h2 class="visually-hidden">Преимущества</h2>
+        <!-- Тут будут преимушества-->
+      </section>
+	  
+	  <section class="hotels">
+	  <h2>Заинтересовались?</h2>
+	  <p>Укажите предполагаемые даты поездки,<br>
+	  и мы покажем вам лучшие предложения гостиниц в Седоне
+	  </p>
+        <p class="hotels-info">Поиск гостиниц в Седоне</p>
+        <form>
+		<!-- Тут будут формы-->
+		</form>
+      </section>
+    </main>
+	<footer class="main-footer">
+      <p class=footer-hashtag>#visitsedona</p>
+	  <div class="footer-social">
+	  <ul>
+	    <li><a class="social-button" href="#">Твиттер</a></li>
+        <li><a class="social-button" href="#">Фейсбук</a></li>
+        <li><a class="social-button" href="#">Ютьюб</a></li>
+		</ul>
+	  </div>
+	  <p class="footer-copyright">
+        <b>Website by</b> 
+        <a class="button" href="https://htmlacademy.ru">HTML Academy</a>
+      </p>
+	  
+    </footer>
   </body>
 </html>
