--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
   <body>
 <header class="main-header">
       <nav class="main-navigation">
-	 
+	 <a class="main-header-logo">
+	 <img src="img/index-logo.svg" width="150" height="100" alt="Логотип «City of Sedona">
+	 </a>
         <ul class="site-navigation">
           <li><a href="info.html">Информация</a></li>
           <li><a href="photovideo.html">Фото и видео</a></li>
-		  <a class="main-header-logo">
-	 <img src="img/index-logo.svg" width="150" height="100" alt="Логотип «City of Sedona">
-	 </a>
           <li><a href="map.html">Карта штата</a></li>
           <li><a href="hotels.html">Гостиницы</a></li>
         </ul>
@@ -22,6 +21,7 @@
 	<main class="container">
       
     <h1 class="visually-hidden">Welcome to the gorgeous</h1>
+	<!--<img src="img/index-logo.svg" width="368" height="153" alt="Sedona because the grand canyon sucks!">-->
       <p>Седона - небольшой городок в Аризоне, заслуживающий большего!<br>
 	  Рассмотрим пять причин, по которым Седона круче, чем Гранд Каньон!
 	  </p>
