набросок графики главной

--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
 	<main class="container">
       
     <h1 class="visually-hidden">Welcome to the gorgeous</h1>
-	<!--<img src="img/index-logo.svg" width="368" height="153" alt="Sedona because the grand canyon sucks!">-->
+	<img src="img/background.jpg" width="600" height="385" alt="background!">
+	<img src="img/welcome.png" width="230" height="177" alt="welcome!">
+	<img src="img/polygon.png" width="600" height="30" alt="диагонали polygon">
+	<img src="img/polygon-2.png" width="600" height="30" alt="прямоугольник polygon">
       <p>Седона - небольшой городок в Аризоне, заслуживающий большего!<br>
 	  Рассмотрим пять причин, по которым Седона круче, чем Гранд Каньон!
 	  </p>
@@ -45,14 +48,15 @@
       <p class=footer-hashtag>#visitsedona</p>
 	  <div class="footer-social">
 	  <ul>
-	    <li><a class="social-button" href="#">Твиттер</a></li>
-        <li><a class="social-button" href="#">Фейсбук</a></li>
-        <li><a class="social-button" href="#">Ютьюб</a></li>
+	    <li><a class="social-button" href="#"><img src="img/layer.png"><img src="img/t.svg"></a></li>
+        <li><a class="social-button" href="#"><img src="img/layer.png"><img src="img/fb.svg"></a></li>
+        <li><a class="social-button" href="#"><img src="img/layer.png"><img src="img/youtube.svg"></a></li>
+		<!-- логотипы исправить -->
 		</ul>
 	  </div>
 	  <p class="footer-copyright">
         <b>Website by</b> 
-        <a class="button" href="https://htmlacademy.ru">HTML Academy</a>
+        <a class="button" href="https://htmlacademy.ru"><img src="img/logo_name.png" width="115" height="41"></a>
       </p>
 	  
     </footer>
