--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 	<main class="container">
       
     <h1 class="visually-hidden">Welcome to the gorgeous</h1>
-	<img src="img/background.jpg" width="600" height="385" alt="background!">
+	<!--<img src="img/background.jpg" width="600" height="385" alt="background!">
 	<img src="img/welcome.png" width="230" height="177" alt="welcome!">
 	<img src="img/polygon.png" width="600" height="30" alt="диагонали polygon">
-	<img src="img/polygon-2.png" width="600" height="30" alt="прямоугольник polygon">
+	<img src="img/polygon-2.png" width="600" height="30" alt="прямоугольник polygon">-->
       <p>Седона - небольшой городок в Аризоне, заслуживающий большего!<br>
 	  Рассмотрим пять причин, по которым Седона круче, чем Гранд Каньон!
 	  </p>
@@ -39,18 +39,28 @@
 	  и мы покажем вам лучшие предложения гостиниц в Седоне
 	  </p>
         <p class="hotels-info">Поиск гостиниц в Седоне</p>
-        <form>
-		<!-- Тут будут формы-->
+        <form> Дата заезда:
+		<!-- Тут будет форма-->
 		</form>
+		<form>Дата выезда:
+		<!-- Тут будет форма-->
+		</form>
+		<form>Взрослые:
+		<!-- Тут будет форма-->
+		</form>
+		<form>Дети:
+		<!-- Тут будет форма-->
+		</form>
+		<!--Сделать кнопку НАЙТИ для перехода к карте-->
       </section>
     </main>
 	<footer class="main-footer">
       <p class=footer-hashtag>#visitsedona</p>
 	  <div class="footer-social">
 	  <ul>
-	    <li><a class="social-button" href="#"><img src="img/layer.png"><img src="img/t.svg"></a></li>
-        <li><a class="social-button" href="#"><img src="img/layer.png"><img src="img/fb.svg"></a></li>
-        <li><a class="social-button" href="#"><img src="img/layer.png"><img src="img/youtube.svg"></a></li>
+	    <li><a class="social-button" href="#"><!--<img src="img/layer.png"><img src="img/t.svg">-->Твиттер</a></li>
+        <li><a class="social-button" href="#"><!--<img src="img/layer.png"><img src="img/fb.svg">-->Фейсбук</a></li>
+        <li><a class="social-button" href="#"><!--img src="img/layer.png"><img src="img/youtube.svg">-->Ютьюб</a></li>
 		<!-- логотипы исправить -->
 		</ul>
 	  </div>
