--- a/inner.html
+++ b/inner.html
@@ -112,14 +112,15 @@
       <p class=footer-hashtag>#visitsedona</p>
 	  <div class="footer-social">
 	  <ul>
-	    <li><a class="social-button" href="#">Твиттер</a></li>
-        <li><a class="social-button" href="#">Фейсбук</a></li>
-        <li><a class="social-button" href="#">Ютьюб</a></li>
+	    <li><a class="social-button" href="#"><!--<img src="img/layer.png"><img src="img/t.svg">-->Твиттер</a></li>
+        <li><a class="social-button" href="#"><!--<img src="img/layer.png"><img src="img/fb.svg">-->Фейсбук</a></li>
+        <li><a class="social-button" href="#"><!--img src="img/layer.png"><img src="img/youtube.svg">-->Ютьюб</a></li>
+		<!-- логотипы исправить -->
 		</ul>
 	  </div>
 	  <p class="footer-copyright">
         <b>Website by</b> 
-        <a class="button" href="https://htmlacademy.ru">HTML Academy</a>
+        <a class="button" href="https://htmlacademy.ru"><img src="img/logo_name.png" width="115" height="41"></a>
       </p>
 	  
     </footer>
