--- a/index.html
+++ b/index.html
@@ -39,17 +39,24 @@
 	  и мы покажем вам лучшие предложения гостиниц в Седоне
 	  </p>
         <p class="hotels-info">Поиск гостиниц в Седоне</p>
-        <form> Дата заезда:
-		<!-- Тут будет форма-->
-		</form>
-		<form>Дата выезда:
-		<!-- Тут будет форма-->
-		</form>
-		<form>Взрослые:
-		<!-- Тут будет форма-->
-		</form>
-		<form>Дети:
-		<!-- Тут будет форма-->
+        <form class="hotels-search" action="https://echo.htmlacademy.ru">
+		<p class="hotels-item">
+		<label for="hotels-date-in">Дата заезда:</label>
+		<input id="hotels-date-in" type="text" name="date-in" value="" placeholder="24 Апреля 2017">
+		</p>
+		<p class="hotels-item">
+		<label for="hotels-date-out">Дата выезда:</label>
+		<input id="hotels-date-out" type="text" name="date-out" value="" placeholder="4 Июля 2017">
+		</p>
+		<p class="hotels-item">
+		<label for="adult">Взрослые:</label>
+		<input id="adult" type="text" name="major" value="" placeholder="2">
+		</p>
+		<p class="hotels-item">
+		<label for="child">Дети:</label>
+		<input id="child" type="text" name="children" value="" placeholder="0">
+		</p>
+		<button class="button" type="submit">Найти</button>
 		</form>
 		<!--Сделать кнопку НАЙТИ для перехода к карте-->
       </section>
@@ -58,9 +65,9 @@
       <p class=footer-hashtag>#visitsedona</p>
 	  <div class="footer-social">
 	  <ul>
-	    <li><a class="social-button" href="#"><!--<img src="img/layer.png"><img src="img/t.svg">-->Твиттер</a></li>
-        <li><a class="social-button" href="#"><!--<img src="img/layer.png"><img src="img/fb.svg">-->Фейсбук</a></li>
-        <li><a class="social-button" href="#"><!--img src="img/layer.png"><img src="img/youtube.svg">-->Ютьюб</a></li>
+	    <li><a class="social-button" href="https://twitter.com/sedona/#"><!--<img src="img/layer.png"><img src="img/t.svg">-->Твиттер</a></li>
+        <li><a class="social-button" href="https://ru-ru.facebook.com/sedona/#"><!--<img src="img/layer.png"><img src="img/fb.svg">-->Фейсбук</a></li>
+        <li><a class="social-button" href="https://www.youtube.com/channel/sedona/#"><!--img src="img/layer.png"><img src="img/youtube.svg">-->Ютьюб</a></li>
 		<!-- логотипы исправить -->
 		</ul>
 	  </div>
