--- a/index.html
+++ b/index.html
@@ -50,11 +50,13 @@
 		</p>
 		<p class="hotels-item">
 		<label for="adult">Взрослые:</label>
+		<button class="minus">-</button>
 		<input id="adult" type="text" name="major" value="" placeholder="2">
-		</p>
-		<p class="hotels-item">
+		<button class="plus">+</button>
 		<label for="child">Дети:</label>
+		<button class="minus">-</button>
 		<input id="child" type="text" name="children" value="" placeholder="0">
+		<button class="plus">+</button>
 		</p>
 		<button class="button" type="submit">Найти</button>
 		</form>
