--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	  и мы покажем вам лучшие предложения гостиниц в Седоне
 	  </p>
         <p class="hotels-info">Поиск гостиниц в Седоне</p>
-        <form class="hotels-search" action="https://echo.htmlacademy.ru">
+        <form class="hotels-search" action="https://echo.htmlacademy.ru" method="post">
 		<p class="hotels-item">
 		<label for="hotels-date-in">Дата заезда:</label>
 		<input id="hotels-date-in" type="text" name="date-in" value="" placeholder="24 Апреля 2017">
@@ -50,13 +50,13 @@
 		</p>
 		<p class="hotels-item">
 		<label for="adult">Взрослые:</label>
-		<button class="minus">-</button>
+		<button class="minus" type="button">-</button>
 		<input id="adult" type="text" name="major" value="" placeholder="2">
-		<button class="plus">+</button>
+		<button class="plus" type="button">+</button>
 		<label for="child">Дети:</label>
-		<button class="minus">-</button>
+		<button class="minus" type="button">-</button>
 		<input id="child" type="text" name="children" value="" placeholder="0">
-		<button class="plus">+</button>
+		<button class="plus" type="button">+</button>
 		</p>
 		<button class="button" type="submit">Найти</button>
 		</form>
@@ -64,7 +64,7 @@
       </section>
     </main>
 	<footer class="main-footer">
-      <p class=footer-hashtag>#visitsedona</p>
+      <a href="#" class="hashtag" target="blank">#Visitsedona</a>
 	  <div class="footer-social">
 	  <ul>
 	    <li><a class="social-button" href="https://twitter.com/sedona/#"><!--<img src="img/layer.png"><img src="img/t.svg">-->Твиттер</a></li>
