--- a/inner.html
+++ b/inner.html
@@ -22,7 +22,10 @@
       <h1 class="page-title">Гостиницы</h1>
 	  <section class="filters">
         <h2 class="visually-hidden">Фильтр гостиниц</h2>
-        <!-- Тут будет фильтр -->
+        <!-- <form class="filter" action="https://echo.htmlacademy.ru">
+		<fieldset><legend>Инфраструктура:</legend></fieldset>
+		<fieldset><legend>Тип жилья:</legend></fieldset>
+		</form>-->
       </section>
 	  <main class="container">
 	  <section class="catalog">
@@ -108,7 +111,7 @@
       
     </main>
 	<footer class="main-footer">
-      <p class=footer-hashtag>#visitsedona</p>
+      <a href="#" class="hashtag" target="blank">#Visitsedona</a>
 	  <div class="footer-social">
 	  <ul>
 	    <li><a class="social-button" href="https://twitter.com/sedona/#"><!--<img src="img/layer.png"><img src="img/t.svg">-->Твиттер</a></li>
@@ -126,3 +129,5 @@
 	
 	 </body>
 </html>
+
+
