--- a/inner.html
+++ b/inner.html
@@ -34,7 +34,7 @@
           <li class="catalog-item">
             <h3>
 			
-			<span class="catalog-item-title">Amara resort & spa</span>
+			<span class="catalog-item-title">Amara resort & spa</span><br>
 			<span class="catalog-category">Гостиница</span>
 			
 			</h3>
@@ -60,7 +60,7 @@
 		  <li class="catalog-item">
             
 			<h3>
-			<span class="catalog-item-title">Desert quail inn</span>
+			<span class="catalog-item-title">Desert quail inn</span><br>
 			<span class="catalog-category">Мотель</span>
 		
 			</h3>
@@ -84,7 +84,7 @@
 		   <li class="catalog-item">
             <h3>
 			
-			<span class="catalog-item-title">Villas at poco diablo</span>
+			<span class="catalog-item-title">Villas at poco diablo</span><br>
 			<span class="catalog-category">Апартаменты</span>
 			
 			</h3>
