--- a/index.html
+++ b/index.html
@@ -40,15 +40,15 @@
 	  </p>
         <p class="hotels-info">Поиск гостиниц в Седоне</p>
         <form class="hotels-search" action="https://echo.htmlacademy.ru" method="post">
-		<p class="hotels-item">
+		<div class="hotels-item">
 		<label for="hotels-date-in">Дата заезда:</label>
 		<input id="hotels-date-in" type="text" name="date-in" value="" placeholder="24 Апреля 2017">
-		</p>
-		<p class="hotels-item">
+		</div>
+		<div class="hotels-item">
 		<label for="hotels-date-out">Дата выезда:</label>
 		<input id="hotels-date-out" type="text" name="date-out" value="" placeholder="4 Июля 2017">
-		</p>
-		<p class="hotels-item">
+		</div>
+		<div class="hotels-item">
 		<label for="adult">Взрослые:</label>
 		<button class="minus" type="button">-</button>
 		<input id="adult" type="text" name="major" value="" placeholder="2">
@@ -57,14 +57,14 @@
 		<button class="minus" type="button">-</button>
 		<input id="child" type="text" name="children" value="" placeholder="0">
 		<button class="plus" type="button">+</button>
-		</p>
+		</div>
 		<button class="button" type="submit">Найти</button>
 		</form>
 		<!--Сделать кнопку НАЙТИ для перехода к карте-->
       </section>
     </main>
 	<footer class="main-footer">
-      <a href="#" class="hashtag" target="blank">#Visitsedona</a>
+      <a href="#" class="hashtag" target="_blank">#Visitsedona</a>
 	  <div class="footer-social">
 	  <ul>
 	    <li><a class="social-button" href="https://twitter.com/sedona/#"><!--<img src="img/layer.png"><img src="img/t.svg">-->Твиттер</a></li>
