--- a/index.html
+++ b/index.html
@@ -47,31 +47,33 @@
 	  </p>
         <button class="hotels-info">Поиск гостиниц в Седоне</button>
         <form class="hotels-search" action="https://echo.htmlacademy.ru" method="post">
-		<div class="hotels-item">
-		<label for="hotels-date-in">Дата заезда:</label>
-		<input id="hotels-date-in" type="text" name="date-in" value="" placeholder="24 Апреля 2017">
-		</div>
-		<div class="hotels-item">
-		<label for="hotels-date-out">Дата выезда:</label>
-		<input id="hotels-date-out" type="text" name="date-out" value="" placeholder="4 Июля 2017">
-		</div>
-		<div class="hotels-item">
-		<label for="adult">Взрослые:</label>
-		<button class="minus" type="button">-</button>
-		<input id="adult" type="text" name="major" value="" placeholder="2">
-		<button class="plus" type="button">+</button>
-		<label for="child">Дети:</label>
-		<button class="minus" type="button">-</button>
-		<input id="child" type="text" name="children" value="" placeholder="0">
-		<button class="plus" type="button">+</button>
-		</div>
+		 <div class="hotels-item">
+		 <label for="hotels-date-in">Дата заезда:</label>
+		 <input id="hotels-date-in" type="text" name="date-in" value="" placeholder="24 Апреля 2017">
+		 </div>
+		 <div class="hotels-item">
+		  <label for="hotels-date-out">Дата выезда:</label>
+		  <input id="hotels-date-out" type="text" name="date-out" value="" placeholder="4 Июля 2017">
+		 </div>
+		 <div class="hotels-item-">
+		  <label for="adult">Взрослые:</label>
+		  <button class="minus" type="button">-</button>
+		  <input class="people" id="adult" type="text" name="major" value="" placeholder="2">
+		  <button class="plus" type="button">+</button>
+		  <label for="child">Дети:</label>
+		  <button class="minus" type="button">-</button>
+		  <input class="people" id="child" type="text" name="children" value="" placeholder="0">
+		  <button class="plus" type="button">+</button>
+		 </div>
 		<button class="button" type="submit">Найти</button>
 		</form>
 		<!--Сделать кнопку НАЙТИ для перехода к карте-->
       </section>
     </main>
 	<footer class="main-footer">
-      <a href="#" class="hashtag" target="_blank">#Visitsedona</a>
+      <div class="a-tag">
+	   <a href="#" class="hashtag" target="_blank">#Visitsedona</a>
+	  </div>
 	  <div class="social">
 	  <ul class="footer-social">
 	    <li><a class="social-button-t" href="https://twitter.com/sedona/#"><!--<img src="img/layer.png"><img src="img/t.svg">-->Твиттер</a></li>
@@ -80,10 +82,10 @@
 		<!-- логотипы исправить -->
 		</ul>
 	  </div>
-	  <p class="footer-copyright">
-        <b>Website by</b> 
+	  <div class="footer-copyright">
+        <span>Website by</span> 
         <a class="button-html" href="https://htmlacademy.ru"><img src="img/logo_name.png" width="115" height="41"></a>
-      </p>
+      </div>
 	  
     </footer>
   </body>
