ксс: исправления и внутренняя страница 3

--- a/index.html
+++ b/index.html
@@ -76,15 +76,14 @@
 	  </div>
 	  <div class="social">
 	  <ul class="footer-social">
-	    <li><a class="social-button-t" href="https://twitter.com/sedona/#"><!--<img src="img/layer.png"><img src="img/t.svg">-->Твиттер</a></li>
-        <li><a class="social-button-f" href="https://ru-ru.facebook.com/sedona/#"><!--<img src="img/layer.png"><img src="img/fb.svg">-->Фейсбук</a></li>
-        <li><a class="social-button-y" href="https://www.youtube.com/channel/sedona/#"><!--img src="img/layer.png"><img src="img/youtube.svg">-->Ютьюб</a></li>
-		<!-- логотипы исправить -->
-		</ul>
+	    <li><a class="social-button-t" href="https://twitter.com/sedona/#"><img src="img/t.svg"></a></li>
+        <li><a class="social-button-f" href="https://ru-ru.facebook.com/sedona/#"><img src="img/fb.svg"></a></li>
+        <li><a class="social-button-y" href="https://www.youtube.com/channel/sedona/#"><img src="img/youtube.svg"></a></li>
+	  </ul>
 	  </div>
 	  <div class="footer-copyright">
         <span>Website by</span> 
-        <a class="button-html" href="https://htmlacademy.ru"><img src="img/logo_name.png" width="115" height="41"></a>
+<a class="button-html" href="https://htmlacademy.ru"><img src="img/logo_name.png" width="115" height="41"></a>
       </div>
 	  
     </footer>
