--- a/inner.html
+++ b/inner.html
@@ -108,10 +108,9 @@
 	  </div>
 	  <div class="social">
 	  <ul class="footer-social">
-	    <li><a class="social-button-t" href="https://twitter.com/sedona/#"><!--<img src="img/layer.png"><img src="img/t.svg">-->Твиттер</a></li>
-        <li><a class="social-button-f" href="https://ru-ru.facebook.com/sedona/#"><!--<img src="img/layer.png"><img src="img/fb.svg">-->Фейсбук</a></li>
-        <li><a class="social-button-y" href="https://www.youtube.com/channel/sedona/#"><!--img src="img/layer.png"><img src="img/youtube.svg">-->Ютьюб</a></li>
-		<!-- логотипы исправить -->
+	    <li><a class="social-button-t" href="https://twitter.com/sedona/#"><img src="img/t.svg"></a></li>
+        <li><a class="social-button-f" href="https://ru-ru.facebook.com/sedona/#"><img src="img/fb.svg"></a></li>
+        <li><a class="social-button-y" href="https://www.youtube.com/channel/sedona/#"><img src="img/youtube.svg"></a></li>
 		</ul>
 	  </div>
 	  <div class="footer-copyright">
