--- a/index.html
+++ b/index.html
@@ -23,17 +23,15 @@
     </header>
 	<main class="container">
       
-    <section class="welcome">
-	<h1 class="visually-hidden">welcome to the gorgeous Sedona</h1>
-	<div class="background-welcome">
-	 <!--<img src="img/background.jpg" width="1200" height="800" alt="background!">
-	 <img src="img/welcome.png" width="459" height="353" alt="welcome!">
-	 <img src="img/polygon.png" width="1200" height="59" alt="диагонали polygon">
-	 <img src="img/polygon-2.png" width="1200" height="216" alt="прямоугольник polygon">-->
+    <section class="welcome-block">
+		 <img src="img/welcome.png" width="459" height="353" alt="welcome!">
+	     <img src="img/polygon.png" width="1200" height="59">
+	 
+	 
       <h2>Седона - небольшой городок в Аризоне, заслуживающий большего!</h3>
 	  <p>Рассмотрим пять причин, по которым Седона круче, чем Гранд Каньон!
 	  </p>
-	</div>
+	
 	  </section>
 	  <section class="features">
         <h2 class="visually-hidden">Преимущества</h2>
