--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
 	   </p>
         <button class="hotels-info">Поиск гостиниц в Седоне</button>
         <form class="hotels-search" action="https://echo.htmlacademy.ru" method="post">
-		  <div class="hotels-item">
+		  <div class="hotels-item-in">
 		   <label for="hotels-date-in">Дата заезда:</label>
 		   <input id="hotels-date-in" type="text" name="date-in" value="" placeholder="24 Апреля 2017">
 		  </div>
-		  <div class="hotels-item">
+		  <div class="hotels-item-out">
 		   <label for="hotels-date-out">Дата выезда:</label>
 		   <input id="hotels-date-out" type="text" name="date-out" value="" placeholder="4 Июля 2017">
 		  </div>
-		  <div class="hotels-item-">
+		  <div class="hotels-item-age">
 		   <label for="adult">Взрослые:</label>
 		   <button class="minus" type="button">-</button>
 		   <input class="people" id="adult" type="text" name="major" value="" placeholder="2">
