--- a/index.html
+++ b/index.html
@@ -29,13 +29,70 @@
 	     <img class="block2" src="img/polygon.png" width="1200" height="59">
 	 </section>
      <section class="features">
-	     <h2>Седона - небольшой городок в Аризоне, заслуживающий большего!</h3>
-	     <p>Рассмотрим пять причин, по которым Седона круче, чем Гранд Каньон!</p>
-        <h2 class="visually-hidden">Преимущества</h2>
-        <!-- Тут будут преимушества-->
-      </section>
+	     <div class="features-text"><h2>Седона - небольшой городок в Аризоне, заслуживающий большего!</h3>
+	     <p>Рассмотрим пять причин, по которым Седона круче, чем Гранд Каньон!</p></div>
+        </section>
+		<section class="advantages">
+		<div class="advantages-item">
+		<h2>Настоящий<br> городок</h2>
+		<span>– №1 –</span>
+		<p>Седона - не аттракцион для туристов,<br> там течет своя жизнь</p>
+		</div>
+		<div class="advantages-picture">
+		<img src="img/advantages-picture.jpg" alt="Виды Седоны" width="800" height="256">
+		</div>
+		</section>
+		<section class="advantages-block">
+		 <div class="advantages-block-item">
+		  <div class="advantages-block-picture">
+		  </div>
+		  <h2>Жилье</h2>
+		  <p>Рекомендуем пожить в настоящем<br> мотеле, все как в кино!</p>
+		 </div>
+         <div class="advantages-block-item">
+		  <div class="advantages-block-picture">
+		  </div>
+		  <h2>Еда</h2>
+		  <p>Всешда заказывайте фирменный бургер,<br> вы не разочаруетесь!</p>
+		 </div>
+		 <div class="advantages-block-item">
+		  <div class="advantages-block-picture">
+		  </div>
+		  <h2>Сувениры</h2>
+		  <p>Не только китайского, но и местного<br> производства!</p>
+		 </div>
+		</section>
+		<section class="advantages">
+		<div class="advantages-picture">
+		<img src="img/advantages-picture-2.jpg" alt="Виды Седоны" width="800" height="256">
+		</div>
+		<div class="advantages-item">
+		<h2>Там есть<br> мост дьявола</h2>
+		<span>– №2 –</span>
+		<p>Да, по нему можно пройти! Если конечно вы<br> осмелитесь</p>
+		</div>
+		</section>
+		<section class="advantages">
+		<div class="advantages-block-item advantages-num">
+		<h2>Небольшая<br> площадь</h2>
+		<span>– №3 –</span>
+		<p>Все достопримечательности<br> находятся очень близко</p>
+		</div>
+		<div class="advantages-block-item advantages-num">
+		<h2>Красивая<br> дорога</h2>
+		<span>– №4 –</span>
+		<p>Ехать в Седону из Лас-Вегаса совсем<br> не скучно!</p>
+		</div>
+		<div class="advantages-block-item advantages-num">
+		<h2>Мало<br> туристов</h2>
+		<span>– №5 –</span>
+		<p>Большинство едет в Гранд-каньон и <br> толпится там</p>
+		</div>
+		</section>
+        
+      
       <section class="hotels">
-	   <h3>Заинтересовались?</h3>
+	   <h2>Заинтересовались?</h2>
 	   <p class="hotels-sentence">Укажите предполагаемые даты поездки,<br>
 	   и мы покажем вам лучшие предложения гостиниц в Седоне
 	   </p>
