сортировка на внутренней

--- a/index.html
+++ b/index.html
@@ -118,7 +118,11 @@
 		  </div>
 		 <button class="button" type="submit">Найти</button>
 		</form>
-		<!--Сделать кнопку НАЙТИ для перехода к карте-->
+		
+      </section>
+	  <section class="map">
+      <h2 class="visually-hidden">Интерактивная карта  Седоны</h2>
+      
       </section>
     </main>
 	<footer class="main-footer">
