--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 	  </div>
 	  <div class="footer-copyright">
         <span>Website by</span> 
-        <a class="button-html" href="https://htmlacademy.ru"><img src="img/logo_name.png" width="115" height="41"></a>
+        <a class="button-html" href="https://htmlacademy.ru"><img src="img/logo_name.png" width="115" height="41" alt="Логотип htmlacademy"></a>
       </div>
 	  </div>
     </footer>
