--- a/inner.html
+++ b/inner.html
@@ -76,6 +76,21 @@
        <li><a href="#">По рейтингу</a></li>
       </ul>
      </div>
+	 <div class="sorting-order-buttons">
+                    <a class="up-button" href="#" aria-label="сортировать по возрастанию">
+                        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 width="11px" height="10px" viewBox="0 0 11 10" enable-background="new 0 0 11 10" xml:space="preserve">
+<polygon fill="#231F20" points="5.5,0 0,10 11,10 "></polygon>
+</svg>
+                    </a>
+                    <a class="down-button active" href="#" aria-label="сортировать по убыванию">
+                        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 width="11px" height="10px" viewBox="0 0 11 10" enable-background="new 0 0 11 10" xml:space="preserve">
+<polyline fill="#231F20" points="5.5,10 0,0 11,0 "></polyline>
+</svg>
+
+                    </a>
+                </div>
     </section>
     <section class="catalog">
      <h2 class="visually-hidden">Список гостиниц по фильтру</h2>
