--- a/index.html
+++ b/index.html
@@ -33,13 +33,11 @@
       </header>
 	<main>   
      <section class="welcome-block">
-	 
 	  <img class="img-welcome" src="img/welcome.png" width="459" height="353" alt="Добро пожаловать!">
-      
 	 </section>
      <section class="features">
 	  <div class="features-text">
-	   <h2>Седона - небольшой городок в Аризоне, заслуживающий большего!</h2>
+	   <h2>Седона - небольшой городок в Аризоне,<br> заслуживающий большего!</h2>
        <p>Рассмотрим пять причин, по которым Седона круче, чем Гранд Каньон!</p>
 	  </div>
      </section>
