--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
      <nav class="header-nav">
       <ul class="header-nav-list">
        <li class="header-nav-item">
-        <a class="header-nav-phrase" href="#">Информация</a>
+        <a class="header-nav-href" href="#">Информация</a>
        </li>
        <li class="header-nav-item">
-        <a class="header-nav-phrase" href="#">Фото и видео</a>
+        <a class="header-nav-href" href="#">Фото и видео</a>
        </li>
        <li class="header-nav-item">
-        <a class="header-nav-phrase" href="#">Карта штата</a>
+        <a class="header-nav-href" href="#">Карта штата</a>
        </li>
        <li class="header-nav-item">
-        <a class="header-nav-phrase" href="inner.html">Гостиницы</a>
+        <a class="header-nav-href" href="inner.html">Гостиницы</a>
        </li>
       </ul>
      </nav>
@@ -239,5 +239,6 @@
 	  </div>
     </footer>
    </div>
+   <script src="js/script.js"></script>
   </body>
 </html>
