--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>HTML Academy: Седона</title>
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/stylemin.css" rel="stylesheet">
 </head>
 
 <body>
@@ -239,7 +239,7 @@
             </div>
         </footer>
     </div>
-    <script src="js/script.js"></script>
+    <script src="js/scriptmin.js"></script>
 </body>
 
 </html>
