--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html lang="ru">
    <head>
       <meta charset="utf-8">
-      <title>HTML Academy: Седона</title>
+      <title>HTML Academy: Седона - главная</title>
       <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
-      <link href="css/normalize.css" rel="stylesheet">
-      <link href="css/stylemin.css" rel="stylesheet">
+      <link href="css/style.css" rel="stylesheet">
    </head>
    <body>
       <div class="container">
@@ -188,10 +187,10 @@
                </div>
             </section>
          </main>
-         <div class="map">
+         <!-- <div class="map">
             <h3 class="visually-hidden">Седона на карте</h3>
             <iframe class="map-iframe" width="1200" height="593" src="https://maps.google.com/maps?width=1200&amp;height=593&amp;hl=en&amp;q=sedona+(sedona)&amp;ie=UTF8&amp;t=&amp;z=10&amp;iwloc=B&amp;output=embed"></iframe>
-         </div>
+         </div> -->
          <footer class="main-footer">
             <div class="container-footer">
                <div class="a-tag">
