--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
     </header>
     <main>
       <div class="welcome-block">
-        <img class="img-welcome" src="img/welcome.png" width="459" height="353" alt="Добро пожаловать!">
+        <img class="welcome-block__img" src="img/welcome.png" width="459" height="353" alt="Добро пожаловать!">
       </div>
       <section class="features">
-        <div class="features-text">
-          <h2>Седона - небольшой городок в Аризоне, заслуживающий большего!</h2>
-          <p>Рассмотрим пять причин, по которым Седона круче, чем Гранд Каньон!</p>
+        <div class="features__inner">
+          <h2 class="features__inner-title">Седона - небольшой городок в Аризоне, заслуживающий большего!</h2>
+          <p class="features__inner-text">Рассмотрим пять причин, по которым Седона круче, чем Гранд Каньон!</p>
         </div>
       </section>
       <section class="advantages">
