Исправления классов блока преймуществ

--- a/index.html
+++ b/index.html
@@ -43,62 +43,66 @@
         </div>
       </section>
       <section class="advantages">
-        <div class="advantages-item">
-          <h2>Настоящий городок</h2>
-          <span>– №1 –</span>
-          <p>Седона - не аттракцион для туристов, там течет своя жизнь</p>
-        </div>
-        <div class="advantages-picture">
-          <img src="img/advantages-picture.jpg" alt="Виды Седоны" width="800" height="256">
+        <div class="advantages-first">
+          <div class="advantages-first__top advantages-broad flex-wrapper">
+            <div class="advantages-broad__desc advantages__item">
+              <h2 class="advantages-broad__title">Настоящий городок</h2>
+              <span class="advantages-broad__num">– №1 –</span>
+              <p class="advantages-broad__text">Седона - не аттракцион для туристов, там течет своя жизнь</p>
+            </div>
+            <div class="advantages-broad__picture">
+              <img src="img/advantages-picture.jpg" alt="Виды Седоны" width="800" height="256">
+            </div>
+          </div>
+          <div class="advantages-first__list flex-wrapper">
+            <div class="advantages-first__list-item list-item">
+              <div class="advantages-first__list-picture advantages-first__list-picture--home">
+              </div>
+              <h2 class="advantages-first__list-title">Жилье</h2>
+              <p class="advantages-first__list-text">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+            </div>
+            <div class="advantages-first__list-item list-item">
+              <div class="advantages-first__list-picture advantages-first__list-picture--food">
+              </div>
+              <h2 class="advantages-first__list-title">Еда</h2>
+              <p class="advantages-first__list-text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+            </div>
+            <div class="advantages-first__list-item list-item">
+              <div class="advantages-first__list-picture advantages-first__list-picture--souvenir">
+              </div>
+              <h2 class="advantages-first__list-title">Сувениры</h2>
+              <p class="advantages-first__list-text">Не только китайского, но и местного производства!</p>
+            </div>
+          </div>
         </div>
       </section>
-      <section class="advantages-block">
-        <div class="advantages-block-item">
-          <div class="advantages-block-picture">
-          </div>
-          <h2>Жилье</h2>
-          <p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
-        </div>
-        <div class="advantages-block-item">
-          <div class="advantages-block-picture">
-          </div>
-          <h2>Еда</h2>
-          <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
-        </div>
-        <div class="advantages-block-item">
-          <div class="advantages-block-picture">
-          </div>
-          <h2>Сувениры</h2>
-          <p>Не только китайского, но и местного производства!</p>
-        </div>
-      </section>
-      <section class="advantages">
-        <div class="advantages-picture">
+      <div class="advantages-second advantages-broad  flex-wrapper">
+        <div class="advantages-broad__picture">
           <img src="img/advantages-picture-2.jpg" alt="Виды Седоны" width="800" height="256">
         </div>
-        <div class="advantages-item">
-          <h2>Там есть<br> мост дьявола</h2>
-          <span>– №2 –</span>
-          <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+        <div class="advantages-broad__desc advantages__item">
+          <h2 class="advantages-broad__title">Там есть<br> мост дьявола</h2>
+          <span class="advantages-broad__num">– №2 –</span>
+          <p class="advantages-broad__text">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
         </div>
-      </section>
-      <section class="advantages">
-        <div class="advantages-block-item advantages-num">
-          <h2>Небольшая площадь</h2>
-          <span>– №3 –</span>
-          <p>Все достопримечательности находятся очень близко</p>
+      </div>
+      <div class="advantages__other-list flex-wrapper">
+        <div class="advantages__other-item advantages__item">
+          <h2 class="advantages__other-title">Небольшая площадь</h2>
+          <span class="advantages__other-num">– №3 –</span>
+          <p class="advantages__other-text">Все достопримечательности находятся очень близко</p>
         </div>
-        <div class="advantages-block-item advantages-num">
-          <h2>Красивая дорога</h2>
-          <span>– №4 –</span>
-          <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+        <div class="advantages__other-item advantages__item">
+          <h2 class="advantages__other-title">Красивая дорога</h2>
+          <span class="advantages__other-num">– №4 –</span>
+          <p class="advantages__other-text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
         </div>
-        <div class="advantages-block-item advantages-num">
-          <h2>Мало туристов</h2>
-          <span>– №5 –</span>
-          <p>Большинство едет в Гранд каньон и толпится там</p>
+        <div class="advantages__other-item advantages__item">
+          <h2 class="advantages__other-title">Мало туристов</h2>
+          <span class="advantages__other-num">– №5 –</span>
+          <p class="advantages__other-text">Большинство едет в Гранд каньон и толпится там</p>
         </div>
-      </section>
+      </div>
       <section class="hotels">
         <h2>Заинтересовались?</h2>
         <p class="hotels-sentence">Укажите предполагаемые даты поездки,
