--- a/index.html
+++ b/index.html
@@ -104,24 +104,24 @@
         </div>
       </div>
       <section class="hotels">
-        <h2>Заинтересовались?</h2>
-        <p class="hotels-sentence">Укажите предполагаемые даты поездки,
+        <h2 class="hotels__title">Заинтересовались?</h2>
+        <p class="hotels__desc">Укажите предполагаемые даты поездки,
           <br> и мы покажем вам лучшие предложения гостиниц в Седоне
         </p>
-        <div class="search-hotel-button-wrapper">
-          <button class="search-hotel-button" type="button">Поиск гостиницы в Седоне</button>
-          <div class="search-hotel-popup-wrapper show">
+        <div class="hotels__search">
+          <button class="hotels__search-btn" type="button">Поиск гостиницы в Седоне</button>
+          <div class="hotels__popup hide">
             <h2 class="visually-hidden">Параметры поиска гостиницы</h2>
-            <form class="search-hotel-popup" action="https://echo.htmlacademy.ru" method="post">
-              <div class="chose-wrapper">
-                <label for="chose-date-in">Дата заезда:</label>
-                <div class="chose-date-wrapper">
-                  <input class="chose-date" type="text" id="chose-date-in" name="date-in" value=""
+            <form class="hotels__popup-form" action="https://echo.htmlacademy.ru" method="post">
+              <div class="hotels__popup-chose">
+                <label class="hotels__popup-label" for="chose-date-in">Дата заезда:</label>
+                <div class="input__wrapper">
+                  <input class="hotels__popup-input" type="text" id="chose-date-in" name="date-in" value=""
                     placeholder="24 Апреля 2017">
                   <svg class="calendar-icon" tabindex="0" version="1.1" xmlns="http://www.w3.org/2000/svg"
                     xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="21px" height="22px"
                     viewBox="0 0 21 22" enable-background="new 0 0 21 22" xml:space="preserve">
-                    <g id="calendar_1_">
+                    <g id="calendar_2_">
                       <path
                         d="M19.251,2.025h-2.845V0.648c0-0.381-0.294-0.689-0.656-0.689c-0.363,0-0.656,0.308-0.656,0.689v1.377h-3.938V0.648
                                        c0-0.381-0.294-0.689-0.655-0.689c-0.363,0-0.657,0.308-0.657,0.689v1.377H5.906V0.648c0-0.381-0.294-0.689-0.656-0.689
@@ -143,10 +143,10 @@
                   </svg>
                 </div>
               </div>
-              <div class="chose-wrapper">
-                <label for="chose-date-out">Дата выезда:</label>
-                <div class="chose-date-wrapper">
-                  <input class="chose-date" type="text" id="chose-date-out" name="date-out" value=""
+              <div class="hotels__popup-chose">
+                <label class="hotels__popup-label" for="chose-date-out">Дата выезда:</label>
+                <div class="input__wrapper">
+                  <input class="hotels__popup-input" type="text" id="chose-date-out" name="date-out" value=""
                     placeholder="4 Июля 2017">
                   <svg class="calendar-icon" tabindex="0" version="1.1" xmlns="http://www.w3.org/2000/svg"
                     xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="21px" height="22px"
@@ -173,38 +173,38 @@
                   </svg>
                 </div>
               </div>
-              <div class="chose-people-wrapper">
-                <label for="adults">Взрослые:</label>
-                <div class="chose-number-wrapper">
+              <div class="hotels__popup-chose">
+                <label class="hotels__popup-label" for="adults">Взрослые:</label>
+                <div class="hotels__popup-numbers">
                   <button class="minus" type="button">
                     <span class="visually-hidden">Уменьшить</span>
                   </button>
-                  <input class="people" type="text" name="number" id="adults" value="" placeholder="2">
+                  <input class="hotels__popup-number" type="text" name="number" id="adults" value="" placeholder="2">
                   <button class="plus" type="button">
                     <span class="visually-hidden">Увеличить </span>
                   </button>
                 </div>
-                <label for="childrens">Дети:</label>
-                <div class="chose-number-wrapper">
+                <label class="hotels__popup-label" for="childrens">Дети:</label>
+                <div class="hotels__popup-numbers">
                   <button class="minus" type="button">
                     <span class="visually-hidden">Уменьшить</span>
                   </button>
-                  <input class="people" type="text" name="number" id="childrens" value="" placeholder="0">
+                  <input class="hotels__popup-number" type="text" name="number" id="childrens" value="" placeholder="0">
                   <button class="plus" type="button">
                     <span class="visually-hidden">Увеличить </span>
                   </button>
                 </div>
               </div>
-              <button class="search-button" type="submit">Найти</button>
+              <button class="hotels__popup-btn" type="submit">Найти</button>
             </form>
           </div>
         </div>
       </section>
     </main>
-    <!-- <div class="map">
-            <h3 class="visually-hidden">Седона на карте</h3>
-            <iframe class="map-iframe" width="1200" height="593" src="https://maps.google.com/maps?width=1200&amp;height=593&amp;hl=en&amp;q=sedona+(sedona)&amp;ie=UTF8&amp;t=&amp;z=10&amp;iwloc=B&amp;output=embed"></iframe>
-         </div> -->
+    <div class="map">
+      <h3 class="visually-hidden">Седона на карте</h3>
+      <!-- <iframe class="map-iframe" width="1200" height="593" src="https://maps.google.com/maps?width=1200&amp;height=593&amp;hl=en&amp;q=sedona+(sedona)&amp;ie=UTF8&amp;t=&amp;z=10&amp;iwloc=B&amp;output=embed"></iframe> -->
+    </div>
     <footer class="main-footer">
       <div class="container-footer">
         <div class="a-tag">
@@ -264,7 +264,7 @@
       </div>
     </footer>
   </div>
-  <script src="js/scriptmin.js"></script>
+  <script src="js/script.js"></script>
 </body>
 
 </html>
